--- a/css/style.css
+++ b/css/style.css
@@ -1163,3 +1163,29 @@ section {
   visibility: visible;
   opacity: 1;
 }
+
+/**ambulance buttuon**/
+
+.ambulance-btn {
+  margin-left: 25px;
+  background: #1977cc;
+  color: #fff;
+  border-radius: 50px;
+  padding: 8px 25px;
+  white-space: nowrap;
+  transition: 0.3s;
+  font-size: 14px;
+  display: inline-block;
+}
+
+.ambulance-btn:hover {
+  background: #3fbbc0;
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .ambulance-btn {
+    margin: 0 15px 0 0;
+    padding: 6px 18px;
+  }
+}
